# LyricForger-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: build-android.yml  ci.yml
src/: main.rs  matcher.rs  tagger.rs  types.rs  ui.rs
