[package]
name = "lyric_forger"
version = "1.2.0"
edition = "2021"
authors = ["AhooraZen"]
description = "A clean, modern Android Termux TUI utility to smartly match and embed lyrics into music files."
readme = "README.md"
license = "MIT"
repository = "https://github.com/AhooraZen/LyricForger-Rust"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
id3 = "1.14"
metaflac = "0.2"
strsim = "0.11"
zip = "2.1"
walkdir = "2.5"
regex = "1.10"
